--- a/css/allseas.css
+++ b/css/allseas.css
@@ -1,4 +1,17 @@
 body{height:100%;width:100%;overflow-x:hidden;font-size:15px}
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: url('/img/balcony.jpg');
+  background-size: cover;
+  background-position: center center;
+  z-index: -1;
+  will-change: transform;
+}
 body,section h3.section-subheading{font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif}
 .intro-heading{text-shadow:1px 1px 5px #000}
 #BrowseModal .modal-dialog{position:absolute;width:90%;left:5%}
@@ -10,7 +23,11 @@ body,section h3.section-subheading{font-family:'Lato','Helvetica Neue',Helvetica
 #BrowseModal .btn{margin-top:30px;padding:13px 30px}
 #BrowseModal .modal-body>div{text-align:center;height:350px;margin:0;width:99.9%}
 #BrowseModal .modal-backdrop{height:1870px!important}
-blockquote{clear:both;font-style:italic;margin-left:10px;margin-right:10px;padding:10px 10px 0 50px;position:relative;quotes:none;background:url(../img/quote.png) 0 0 no-repeat;border:0;font-size:15px;line-height:200%}
+.destination {
+  background-position: center center;
+  background-size: cover;
+}
+blockquote{clear:both;font-style:italic;margin-left:10px;margin-right:10px;padding:10px 10px 0 50px;position:relative;quotes:none;background:url(/img/quote.png) 0 0 no-repeat;border:0;font-size:15px;line-height:200%}
 .introicons h2{font-family:'Dancing Script','Helvetica Neue','Oswald'}
 .introicons .col-md-4{margin-top:45px}
 #about a,a.quicklink,a.fc-more{color:#0a5eb2}
@@ -31,9 +48,9 @@ footer p{font-family:'Dancing Script','Helvetica Neue','Oswald';font-size:20px;c
 #contact .fa-phone,#contact .fa-envelope{font-size:34px!important;margin:20px 0 14px}
 .contactboxes p{line-height:1.3;font-size:16px}
 *[id^='box-']{height:160px;padding:30px 0 40px}
-.contactboxes #box-1{background-color:rgba(40, 40, 40, 0.7)}
+.contactboxes #box-1{background-color:rgba(40, 40, 40, 0.7);border-radius: 0px}
 .contactboxes #box-2{background-color:rgba(32, 32, 32, 0.7)}
-.contactboxes #box-3{background-color:rgba(24, 24, 24, 0.7)}
+.contactboxes #box-3{background-color:rgba(24, 24, 24, 0.7);border-radius: 0 0 10px 10px}
 .contactboxes i{color:#FFC1CA}
 .text-muted{color:#777}
 .text-primary{color:#fed136}
@@ -91,6 +108,8 @@ header .intro-text .intro-heading{margin-bottom:50px;font-size:90px;line-height:
 *[id^='box-']{height:190px;padding:40px 0}
 section{margin-bottom:30px}
 .fa-envelope-o{font-size:24px!important}
+.contactboxes #box-1{border-radius: 0 0 0px 10px;}
+.contactboxes #box-3{border-radius: 0 0 10px 0px;}
 }
 @media(max-width:400px) {
 blockquote{font-size:14px;line-height:170%;padding:10px 2px 0 50px;margin-left:0;margin-right:6px;}
