added box shadow to buttons

--- a/css/allseas.css
+++ b/css/allseas.css
@@ -219,7 +219,8 @@ p.large {
     font-size: 16px;
     color: #fff;
     background-color: #fec325;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 .btn-xl:active,
 .btn-xl.active,
