--- a/css/allseas.css
+++ b/css/allseas.css
@@ -132,7 +132,7 @@ section#contact {
     margin-top: 30px
 }
 footer {
-    padding: 25px 0 12px;
+    padding: 13px 0 5px;
     background: rgba(59, 89, 153, .75);
     text-align: center;
     line-height: 40px;
@@ -141,6 +141,7 @@ footer {
 footer p {
     font-family: Dancing Script, Helvetica Neue, Oswald;
     font-size: 20px;
+    margin: 0;
     color: #fafafa
 }
 #about {
