--- a/css/static-contact-form.css
+++ b/css/static-contact-form.css
@@ -10,8 +10,8 @@
 .cf-button {
   position: relative;
   width: 100%;
-  background-color: #F6BC1E;
-  border: 0.3em solid #F6BC1E;
+  background-color: #FFC21D;
+  border: 0.3em solid #FFC21D;
   text-align: center;
   font-weight: 600;
   color: #fff;
