--- a/css/allseas.css
+++ b/css/allseas.css
@@ -71,7 +71,7 @@ section h3.section-subheading {
     background-position: center center;
     background-size: cover
 }
-blockquote {
+/*blockquote {
     clear: both;
     font-style: italic;
     margin-left: 10px;
@@ -83,7 +83,7 @@ blockquote {
     border: 0;
     font-size: 15px;
     line-height: 1.8
-}
+}*/
 .introicons h2 {
     font-family: Dancing Script, Helvetica Neue, Oswald
 }
@@ -106,19 +106,20 @@ a.fc-more {
     clear: both
 }
 #map {
-    height: 400px
+    height: 400px;
+    padding: 0;
 }
 section {
     padding: 80px 0 100px;
     width: 97%;
     max-width: 1470px;
     margin: 0 auto;
-    box-shadow: 0 0 14px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .25);
     margin-bottom: 15px;
     border-radius: 10px
 }
 section#contact {
-    background: rgba(73, 100, 158, 0.7);
+    background: rgba(73, 100, 158, 0.8);
     padding-bottom: 0
 }
 #contact .container {
@@ -133,10 +134,10 @@ section#contact {
 }
 footer {
     padding: 13px 0 5px;
-    background: rgba(73, 100, 158, 0.75);
+    background: rgba(73, 100, 158, 0.8);
     text-align: center;
     line-height: 40px;
-    box-shadow: 0 -1px 5px rgba(0, 0, 0, .5)
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, .25)
 }
 footer p {
     font-family: Dancing Script, Helvetica Neue, Oswald;
@@ -145,7 +146,7 @@ footer p {
     color: #fafafa
 }
 #about {
-    background: rgba(246, 246, 246, 0.8);
+    background: rgba(255, 255, 255, 0.8);
     padding-bottom: 25px!important
 }
 .contactboxes {
@@ -188,7 +189,7 @@ footer p {
     border-radius: 0 0 10px 10px
 }
 .contactboxes i {
-    color: #ffc1ca
+    color: #ffe1e1
 }
 .text-muted {
     color: #777
@@ -294,9 +295,10 @@ section h2.section-heading {
 }
 section h3.section-subheading {
     text-transform: none;
-    font-size: 15px;
+    font-size: 16px;
     font-style: italic;
-    font-weight: 400
+    font-weight: 400;
+    font-family: "Georgia", serif;
 }
 .btn:focus,
 .btn:active,
@@ -333,14 +335,7 @@ body {
     background-color: rgba(255, 227, 129, .9);
     border-radius: 5px
 }
-::-moz-selection {
-    text-shadow: none;
-    background: #f799a7
-}
-::selection {
-    text-shadow: none;
-    background: #f799a7
-}
+
 .navbar-default .nav li a {
     text-transform: uppercase;
     font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif
@@ -362,104 +357,7 @@ body {
     left: -15px;
     top: -35px
 }
-.bx-wrapper {
-    position: relative;
-    margin: 0 auto 60px;
-    padding: 0;
-    *zoom: 1
-}
-.bx-wrapper img {
-    max-width: 100%;
-    display: block
-}
-.bx-wrapper .bx-viewport {
-    height: auto!important;
-    box-shadow: 0 0 5px #868686;
-    border-radius: 5px;
-    background: none;
-    -webkit-transform: translatez(0);
-    -ms-transform: translatez(0);
-    transform: translatez(0)
-}
-.bx-wrapper .bx-pager,
-.bx-wrapper .bx-controls-auto {
-    position: absolute;
-    bottom: -30px;
-    width: 100%
-}
-.bx-wrapper .bx-pager {
-    text-align: center;
-    font-size: .85em;
-    font-family: Arial;
-    font-weight: 700;
-    color: #666;
-    padding-top: 20px
-}
-.bx-wrapper .bx-pager .bx-pager-item,
-.bx-wrapper .bx-controls-auto .bx-controls-auto-item {
-    display: inline-block;
-    *zoom: 1;
-    *display: inline
-}
-.bx-wrapper .bx-pager.bx-default-pager a {
-    background: #666;
-    text-indent: -9999px;
-    display: block;
-    width: 10px;
-    height: 10px;
-    margin: 0 5px;
-    outline: 0;
-    border-radius: 5px
-}
-.bx-wrapper .bx-pager.bx-default-pager a:hover,
-.bx-wrapper .bx-pager.bx-default-pager a.active {
-    background: #000
-}
-.bx-wrapper .bx-prev:hover {
-    background-position: 0 0
-}
-.bx-wrapper .bx-next:hover {
-    background-position: -43px 0
-}
-.bx-wrapper .bx-controls-direction a {
-    position: absolute;
-    top: 50%;
-    margin-top: -16px;
-    outline: 0;
-    width: 32px;
-    height: 32px;
-    text-indent: -9999px;
-    z-index: 9999
-}
-.bx-wrapper .bx-controls-direction a.disabled {
-    display: none
-}
-.bx-wrapper .bx-controls-auto {
-    text-align: center
-}
-.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
-    text-align: left;
-    width: 80%
-}
-.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
-    right: 0;
-    width: 35px
-}
-.bx-wrapper .bx-caption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: #666\9;
-    background: rgba(80, 80, 80, .75);
-    width: 100%
-}
-.bx-wrapper .bx-caption span {
-    color: #fff;
-    font-family: Arial;
-    display: block;
-    font-size: .85em;
-    padding: 10px
-}
+
 @media(min-width:1000px) {
     *[id^=box-] {
         width: 25%!important;
@@ -542,12 +440,262 @@ body {
         border-radius: 0 0 10px
     }
 }
+
+/* -------------------------------- 
+        Testimonial slider 
+-------------------------------- */
+ul {
+  padding: 0;
+}
+.cd-testimonials-wrapper {
+  position: relative;
+  width: 92%;
+  max-width: 1100px;
+  background-color: rgba(187, 187, 187, 0.68);
+  margin: 0 auto 2em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding: 20px 40px 70px;
+  z-index: 1;
+  border-radius: 4px;
+}
+.cd-testimonials-wrapper::after {
+  /* quotation mark */
+  content: '\201C';
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  /*padding-top: 8px;*/
+  margin-left: -25px;
+  background: rgba(32, 32, 34, 0.9);
+  font-family: "Georgia", serif;
+  color: #ffffff;
+  font-size: 70px;
+  font-size: 4.375em;
+  text-align: center;
+  /* visible on big devices only */
+  /*display: none;*/
+}
+.cd-testimonials-wrapper li {
+  list-style: none;
+}
+@media only screen and (min-width: 768px) {
+  .cd-testimonials-wrapper {
+    /*margin: 4em auto;*/
+    width: auto;
+    padding: 40px 50px 80px;
+  }
+}
+/*@media only screen and (min-width: 1170px) {
+  .cd-testimonials-wrapper::after {
+    display: block;
+  }
+}
+*/
+.cd-testimonials {
+  /*color: #ffffff;*/
+  text-align: center;
+}
+.cd-testimonials::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+.cd-testimonials > li {
+  position: absolute;
+  opacity: 0;
+}
+.cd-testimonials > li:first-child {
+  position: relative;
+  opacity: 1;
+}
+.cd-testimonials p {
+  font-family: "Georgia", serif;
+  font-style: italic;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  padding: 0 4%;
+}
+@media only screen and (min-width: 768px) {
+  .cd-testimonials p {
+    /*font-size: 22px;*/
+    font-size: 1em;
+  }
+}
+@media only screen and (min-width: 1170px) {
+  .cd-testimonials p {
+    /*font-size: 26px;*/
+    font-size: 1.1em;
+    line-height: 1.6;
+  }
+}
+
+.cd-author img, .cd-author .cd-author-info {
+  display: inline-block;
+  vertical-align: middle;
+}
+.cd-author img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 5px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.cd-author .cd-author-info {
+  text-align: center;
+  line-height: 1.2;
+}
+.cd-author .cd-author-info li:first-child {
+  font-size: 14px;
+  font-size: 0.875em;
+}
+.cd-author .cd-author-info li:last-child {
+  font-size: 12px;
+  font-size: 0.75em;
+  color: #6b6b6b;
+}
+@media only screen and (min-width: 768px) {
+  .cd-author img {
+    width: 50px;
+    height: 50px;
+  }
+  .cd-author .cd-author-info {
+    line-height: 1.4;
+  }
+  .cd-author .cd-author-info li:first-child {
+    font-size: 16px;
+    font-size: 1em;
+  }
+  .cd-author .cd-author-info li:last-child {
+    font-size: 14px;
+    font-size: 0.875em;
+  }
+}
+
+.flex-direction-nav li {
+  position: absolute;
+  height: 100%;
+  width: 40px;
+  top: 0;
+}
+.flex-direction-nav li:first-child {
+  left: 0;
+}
+.flex-direction-nav li:last-child {
+  right: 0;
+}
+.flex-direction-nav li a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  /* image replacement */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  -webkit-transition: background-color 0.2s;
+  -moz-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
+.no-touch .flex-direction-nav li a:hover {
+  background-color: #323234;
+}
+.flex-direction-nav li a::before, .flex-direction-nav li a::after {
+  /* left and right arrows in css only */
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 2px;
+  height: 13px;
+  background-color: #666;
+}
+.flex-direction-nav li a::before {
+  -webkit-transform: translateY(-35px) rotate(45deg);
+  -moz-transform: translateY(-35px) rotate(45deg);
+  -ms-transform: translateY(-35px) rotate(45deg);
+  -o-transform: translateY(-35px) rotate(45deg);
+  transform: translateY(-35px) rotate(45deg);
+}
+.flex-direction-nav li a::after {
+  -webkit-transform: translateY(-27px) rotate(-45deg);
+  -moz-transform: translateY(-27px) rotate(-45deg);
+  -ms-transform: translateY(-27px) rotate(-45deg);
+  -o-transform: translateY(-27px) rotate(-45deg);
+  transform: translateY(-27px) rotate(-45deg);
+}
+.flex-direction-nav li:last-child a::before {
+  -webkit-transform: translateY(-35px) rotate(-45deg);
+  -moz-transform: translateY(-35px) rotate(-45deg);
+  -ms-transform: translateY(-35px) rotate(-45deg);
+  -o-transform: translateY(-35px) rotate(-45deg);
+  transform: translateY(-35px) rotate(-45deg);
+}
+.flex-direction-nav li:last-child a::after {
+  -webkit-transform: translateY(-27px) rotate(45deg);
+  -moz-transform: translateY(-27px) rotate(45deg);
+  -ms-transform: translateY(-27px) rotate(45deg);
+  -o-transform: translateY(-27px) rotate(45deg);
+  transform: translateY(-27px) rotate(45deg);
+}
+@media only screen and (min-width: 768px) {
+  .flex-direction-nav li {
+    width: 50px;
+  }
+}
+@media only screen and (min-width: 1170px) {
+  .flex-direction-nav li a::before, .flex-direction-nav li a::after {
+    background-color: #666;
+    -webkit-transition: background-color 0.2s;
+    -moz-transition: background-color 0.2s;
+    transition: background-color 0.2s;
+  }
+  .flex-direction-nav li a:hover::before, .flex-direction-nav li a:hover::after {
+    background-color: #333;
+  }
+}
+
+.cd-see-all {
+  border-radius: 0 0 4px 4px;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #252527;
+  text-align: center;
+  text-transform: uppercase;
+  color: #b0b0b0!important;
+  text-decoration: none!important;
+  font-weight: 700;
+  font-size: 12px;
+  font-size: 0.75em;
+  -webkit-transition: color, 0.2s;
+  -moz-transition: color, 0.2s;
+  transition: color, 0.2s;
+}
+
+.cd-see-all:hover {
+  color: #fff!important;
+}
+
+@media (min-width: 768px)
+.container {
+    width: auto;
+}
+
 @media(max-width:400px) {
-    blockquote {
-        font-size: 14px;
-        line-height: 170%;
-        padding: 10px 2px 0 50px;
-        margin-left: 0;
-        margin-right: 6px
+    .cd-testimonials-wrapper::after {
+        top: 15px;
+        left: 12px;
+        width: 40px;
+        height: 40px;
+        font-size: 3em;
+    }
+    .cd-testimonials p {
+        padding: 0;
     }
 }
