--- a/css/static-contact-form.css
+++ b/css/static-contact-form.css
@@ -21,7 +21,7 @@
   cursor: pointer;
   text-decoration: none;
   padding: .75em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
   border-radius: 3px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
   opacity: .95;
@@ -35,12 +35,13 @@
     position: relative;
     z-index: 1; }
     .cf-button span:first-of-type::before {
-      content: '';
-      background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20485.211%20485.211%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M485.2%20364c0%2010.5-3%2020.4-7.8%2029L324.2%20221.8%20475.8%2089c6%209.4%209.4%2020.4%209.4%2032.3V364zM242.6%20252.7l211-184.5c-8.8-4.7-18.5-7.6-29-7.6h-364c-10.5%200-20.2%203-28.8%207.6l210.8%20184.5zm58.8-11.2l-48.8%2042.8c-3%202.5-6.4%203.7-10%203.7-3.6%200-7-1-10-3.6l-48.8-42.8-155%20173.6c9.2%206%2020%209.4%2032%209.4h363.8c11.7%200%2022.6-3.5%2032-9.4L301.3%20241.6zM9.4%2089C3.6%2098.5%200%20109.5%200%20121.4V364c0%2010.5%203%2020.4%207.8%2029L161%20221.7%209.4%2089z%22%2F%3E%3C%2Fsvg%3E");
-      background-repeat: no-repeat;
-      background-position: left center;
-      padding-left: 1.45em;
-      background-size: 1.1em; }
+      content: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20485.211%20485.211%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M485.2%20364c0%2010.5-3%2020.4-7.8%2029L324.2%20221.8%20475.8%2089c6%209.4%209.4%2020.4%209.4%2032.3V364zM242.6%20252.7l211-184.5c-8.8-4.7-18.5-7.6-29-7.6h-364c-10.5%200-20.2%203-28.8%207.6l210.8%20184.5zm58.8-11.2l-48.8%2042.8c-3%202.5-6.4%203.7-10%203.7-3.6%200-7-1-10-3.6l-48.8-42.8-155%20173.6c9.2%206%2020%209.4%2032%209.4h363.8c11.7%200%2022.6-3.5%2032-9.4L301.3%20241.6zM9.4%2089C3.6%2098.5%200%20109.5%200%20121.4V364c0%2010.5%203%2020.4%207.8%2029L161%20221.7%209.4%2089z%22%2F%3E%3C%2Fsvg%3E");
+      width: 1.1em;
+      height: 1.1em;
+      display: inline-block;
+      margin-right: .4em;
+      -webkit-transform: translateY(0.15em);
+              transform: translateY(0.15em); }
   .cf-button span.loading-bar {
     content: '';
     position: absolute;
