--- a/css/static-contact-form.css
+++ b/css/static-contact-form.css
@@ -75,13 +75,13 @@
   background-color: #E93A3F;
   border-color: #E93A3F; }
   .cf-but-false span::before {
-    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20485.249%20485.249%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M481.2%20420.6l-219-380c-4-7-11-11-19-11s-15%204-19%2011l-221%20382c-10%2017%205%2033%2019%2033h442c12%200%2021-10%2021-22%200-5-1-9-4-13zm-421-9l183-317%20183%20317h-366z%22%2F%3E%3Cpath%20d%3D%22M221.2%20192.6v97c0%2012%2010%2022%2022%2022s22-10%2022-22v-97c0-12-10-22-22-22s-22%2010-22%2022zM243.2%20330.6c-15%200-27%2012-27%2027s12%2028%2027%2028%2027-13%2027-28-12-27-27-27z%22%2F%3E%3C%2Fsvg%3E") !important; }
+    content: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20485.249%20485.249%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M481.2%20420.6l-219-380c-4-7-11-11-19-11s-15%204-19%2011l-221%20382c-10%2017%205%2033%2019%2033h442c12%200%2021-10%2021-22%200-5-1-9-4-13zm-421-9l183-317%20183%20317h-366z%22%2F%3E%3Cpath%20d%3D%22M221.2%20192.6v97c0%2012%2010%2022%2022%2022s22-10%2022-22v-97c0-12-10-22-22-22s-22%2010-22%2022zM243.2%20330.6c-15%200-27%2012-27%2027s12%2028%2027%2028%2027-13%2027-28-12-27-27-27z%22%2F%3E%3C%2Fsvg%3E") !important; }
 
 .cf-but-true {
   background-color: #2AD14F;
   border-color: #2AD14F; }
   .cf-but-true span::before {
-    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2070%2070%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M26.5%2070c-2.2%200-4.3-1-5.6-2.8L3%2043.6c-2.3-3-1.7-7.4%201.4-9.7%203-2.5%207.4-1.8%209.8%201.2L26%2050.7%2055.4%203.3C57.5%200%2061.8-1%2065%201c3.3%202%204.3%206.4%202.3%209.7l-35%2056c-1%202-3.2%203.2-5.5%203.3h-.3z%22%2F%3E%3C%2Fsvg%3E") !important; }
+    content: url("data:image/svg+xml;charset=UTF8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2070%2070%22%20fill%3D%22%23fff%22%3E%3Cpath%20d%3D%22M26.5%2070c-2.2%200-4.3-1-5.6-2.8L3%2043.6c-2.3-3-1.7-7.4%201.4-9.7%203-2.5%207.4-1.8%209.8%201.2L26%2050.7%2055.4%203.3C57.5%200%2061.8-1%2065%201c3.3%202%204.3%206.4%202.3%209.7l-35%2056c-1%202-3.2%203.2-5.5%203.3h-.3z%22%2F%3E%3C%2Fsvg%3E") !important; }
 
 .cf-input {
   position: relative;
